--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,13 +25,13 @@
     body {
 
         width: 100%;
-
+        
     }
 
 
     /* Personalização da barra de rolagem */
     body::-webkit-scrollbar {
-        background-color: #010A19;
+        
         width: 8px;
 
         border: 1px solid #010A19;
@@ -45,7 +45,7 @@
         height: 20px;
         border-radius: 7px;
     }
-
+    
 
 
     /* Cabeçalho*/
@@ -73,25 +73,25 @@
 
     /* Cabeçalho logo*/
     .menugeral img {
-
-
-        width: 290px;
+        width: 250px;
     }
 
     /* Cabeçalho lista dos serviços*/
     .menugeral ul {
-        margin-left: 300px;
-
+        
+        margin-left: 0;
+        position: relative;
         display: flex;
         list-style: none;
         gap: 10px;
     }
 
     .menugeral ul a {
-        font-size: .6em;
+        
+        font-size: 0.6em;
         text-decoration: none;
         color: #fff;
-        padding: 1.5rem;
+        padding: 1rem;
         border-bottom: 3px solid transparent;
         transition: all 0.2s ease-in-out;
 
@@ -105,10 +105,8 @@
 
     /* /Sessões gerais/ */
     section {
-
-
         width: 100%;
-        /* min-height: 100vh; */
+        height: 100%;
         display: flex;
         align-items: center;
     }
@@ -118,12 +116,15 @@
     section:nth-of-type(1) {
         /* /Adicionando a imagem junto com o efeito vidro/ */
         background-image: url(../img/inicio.jpg);
+        
 
         /*Alinhando a posição da imagem ao centro */
         background-position: center center;
         background-size: cover;
         background-repeat: no-repeat;
         height: 600px;
+        
+        
 
     }
 
@@ -132,9 +133,10 @@
         display: flex;
         align-items: center;
         width: 100%;
-        height: 600px;
+        height: 100%;
         background: radial-gradient(170.68% 69.80% at -0.00% 33.72%, rgba(69, 69, 69, 0.822) 0%, rgba(255, 255, 255, 0.00) 100%);
         backdrop-filter: blur(2px);
+        
 
 
     }
@@ -153,11 +155,6 @@
         color: #fff;
         margin-bottom: 0px;
         text-align: left;
-        /* position: absolute;
-    top: 39%;
-    left: 28%;
-    transform: translate(-50%,-50%); */
-
         margin-left: 35px;
 
 
@@ -182,14 +179,15 @@
         /* /Alinhamento do mouse/ */
         position: absolute;
         top: 65%;
-        left: 3%;
+        left: 5%;
+        
         transform: translate(-70%, -50%);
 
         /* /Medidas/ */
         width: 34px;
         height: 150px;
         margin-right: 80px;
-        z-index: 1;
+        z-index: 2;
     }
 
     .mouse {
@@ -267,11 +265,7 @@
     /* /Inicio de sessão --> Serviços/ */
     section:nth-of-type(2) {
         background: #010A19;
-
-
-        display: block;
-        justify-content: center;
-        align-items: center;
+        display: grid;
         height: 750px;
     }
 
@@ -281,48 +275,46 @@
         color: #fff;
         font-size: 2.5em;
         text-align: center;
-        padding-top: 90px;
+        padding-top: 40px;
         margin: auto;
         text-transform: uppercase;
+        
     }
 
-    .titulo-servico h1 {
-        background-color: aqua;
-    }
 
     /* Galeria dos cards*/
     .gallery {
-
         display: flex;
         align-items: center;
         justify-content: space-around;
-        padding-bottom: 50px;
+        padding-bottom: 80px;
         flex-wrap: wrap;
-        margin-top: 50px;
-
+        
+        
+        
 
     }
-
     .card {
-
+        
         border: 2px solid;
         color: #00cc83;
-        position: relative;
-        left: 0px;
         width: 255px;
         border-radius: 10px;
         height: 500px;
         display: flex;
         align-items: center;
-        justify-content: center;
         text-align: center;
-        cursor: pointer;
         transition: all 0.2s ease-in-out;
+        
 
     }
 
     .gallery a {
+        
         text-decoration: none;
+        border-radius: 8px;
+        margin-top: 30px;
+        
     }
 
     .gallery h2 {
@@ -342,6 +334,8 @@
     .gallery>a:nth-child(1) {
         background-image: url(../img/imgServicos/img_consulting.jpg);
         background-size: cover;
+        
+        
 
     }
 
@@ -360,9 +354,12 @@
         background-size: cover;
     }
 
-    .card:hover {
-        width: 280px;
-
+    
+    .gallery a:hover{
+        transition: all 0.3s ease-in-out;
+        scale: 1.1;
+        z-index: 0;
+        
     }
 
 
@@ -373,27 +370,23 @@
     }
 
     .sobre {
-
         margin: auto;
         display: flex;
         align-items: center;
-
         color: #fff;
     }
-
     .texto-sobre ul {
-
-
-
+        
         text-align: justify;
         list-style: none;
         font-size: 2em;
         text-align: justify;
-        width: 650px;
-        margin: 30px;
-
-
+        width: 100%;
+        max-width: 850px;
+        padding: 0 50px;
+        margin: 0 auto;
     }
+    
 
     .texto-sobre h1 {
 
@@ -401,26 +394,25 @@
         text-transform: uppercase;
         font-size: 1em;
         margin-bottom: 48px;
-
-
     }
 
     /* Inicio do carrossel de imagens  */
     .carrosel {
-
+        display: flex;
         border-radius: 7px;
-        margin-left: 30px;
+        margin: auto;
         box-shadow: 1px 2px 5px 3px #00cc83;
         overflow: hidden;
         height: 500px;
-        width: 599px;
+        width: 100%;
+        max-width: 599px;
+        
 
 
     }
 
     .container_imgs {
         display: flex;
-
         transform: translateX(0);
         transition: all 1s ease-in-out;
 
@@ -447,13 +439,14 @@
     }
 
     .missao {
+        max-width: 100%;
         height: 250px;
         display: flex;
         align-items: center;
         justify-content: center;
         text-align: center;
         list-style: none;
-        margin: auto 120px;
+        margin: auto;
     }
 
     .icone-titulo {
@@ -473,7 +466,7 @@
 
         text-align: justify;
         font-size: 1.5em;
-        margin: auto 80px auto 20px;
+        margin: auto 30px ;
 
 
     }
@@ -492,16 +485,14 @@
         justify-content: center;
         text-align: center;
         list-style: none;
-        margin: auto 120px;
+        margin: auto;
     }
 
     .visao h4 {
 
         text-align: justify;
         font-size: 1.5em;
-        margin: auto 80px auto 20px;
-
-
+        margin: auto 30px ;
     }
 
     /* ------------ Valores ------------*/
@@ -513,14 +504,14 @@
         justify-content: center;
         text-align: center;
         list-style: none;
-        margin: auto 120px;
+        margin: auto;
     }
 
     .valores h4 {
 
         text-align: justify;
-        font-size: 1.6em;
-        margin: auto 80px auto 20px;
+        font-size: 1.4em;
+        margin: auto 30px ;
 
 
     }
@@ -542,35 +533,28 @@
         text-align: justify;
         font-size: 1.5em;
         margin: auto 80px auto 20px;
-
-
     }
-
-
-
-
-
     section:nth-of-type(4) {
         background: linear-gradient(180deg, #00BB83 0%, #00251A 100%);
         height: 700px;
     }
 
     .tiVerde {
-
-        margin: auto;
+        
         display: flex;
         align-items: center;
+        
     }
 
     .titulo-texto-botao-tiVerde {
-
+        
         list-style: none;
         text-indent: 20px;
         font-size: 2em;
-
         padding: 30px;
-        margin-left: 20px;
+        margin: auto;
         text-align: justify;
+        max-width: 50%;
 
 
     }
@@ -622,11 +606,11 @@
     /* arvore*/
 
     .imagem-tiverde img {
-
-        padding: 30px;
-        width: 600px;
-        height: 600px;
-        margin-left: 60px;
+        margin-right: 30px;
+        
+        width: 90%;
+        min-width: 400px;
+        
     }
 
     /* rodapé*/
@@ -639,7 +623,6 @@
 
     .topicos {
         margin: auto;
-
         display: flex;
         align-items: center;
         justify-content: space-around;
@@ -649,7 +632,8 @@
 
     /* logo*/
     .logo-footer img {
-        width: 290px;
+        width: 100%;
+        max-width: 250px;
     }
 
     /* Redes sociais*/
